--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.6.0",
         "bootstrap-icons": "^1.11.3"
     }
 }
